# kagent

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  disasm.cpp  disasm.h  find_symbol_crc_unicorn.cpp  kdeploy-android.sh  kdeploy-host.sh  kdeploy-um.sh  kdeploy.cpp  kdeploy.h  mod.c.in  utils.cpp  utils.h
capstone/: CMakeLists.txt
cmake/: module.cmake  toolchain.cmake.in
cmake/Platform/: LinuxKernel.cmake
docs/: plt.aarch64.S  plt.c  plt.x86_64.S
docs/hello/: hello.c
include/kagent/: common.h  kapi.h
libs/: CMakeLists.txt
libs/insn/: CMakeLists.txt
libs/insn/arm64/: CMakeLists.txt  insn-def.h  insn.c  insn.h  types.h
libs/kagent/: CMakeLists.txt
libs/kagent/kagent/: common.h  private.h
libs/kapi/: CMakeLists.txt  kapi.h
libs/resolve_page/: CMakeLists.txt  resolve_page.c  resolve_page.h
modules/: CMakeLists.txt
modules/debugfs/: CMakeLists.txt  module.c
modules/fingeradj/: .gitignore  CMakeLists.txt  client.c  client.h  module.c
modules/hello/: CMakeLists.txt  module.c
modules/vmrw/: CMakeLists.txt  client.c  client.h  module.c
scripts/: Makefile  build-sysroot.sh  generate_symbol_list.py
tests/: CMakeLists.txt
tests/test_vmrw/: CMakeLists.txt  test_vmrw.cpp
unicorn/: CMakeLists.txt
zlib/: CMakeLists.txt
